# habits_service

./: .env.sample  .flake8  Dockerfile  README.md  coverage.txt  coverage_report.txt  docker-compose.yaml  habits.json  pyproject.toml  users.json
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_periodicity.py  0003_alter_habit_options_habit_created_at.py  0003_alter_habit_options_habit_created_at_and_more.py  0004_remove_habit_created_at.py  0005_remove_habit_periodicity_habit_periodicity_every.py
users/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_country_and_more.py  0003_user_tg_chat_id.py
